# paid-telegram-bot-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
00.start/: LAUNCHGUIDE.md  paid-telegram-bot-development-plan.md  paid-telegram-bot-summary.md
src/paid_telegram_bot/: __init__.py  __main__.py  config.py  license.py  server.py
src/paid_telegram_bot/bot/: __init__.py  bot_manager.py
src/paid_telegram_bot/database/: __init__.py  database.py  models.py  payment_repo.py  plan_repo.py  security_repo.py  usage_repo.py  user_repo.py
src/paid_telegram_bot/infrastructure/: __init__.py  message_queue.py  rate_limiter.py  request_queue.py  typing_indicator.py
src/paid_telegram_bot/prompts/: __init__.py  setup_prompts.py
src/paid_telegram_bot/resources/: __init__.py  telegram_resources.py
src/paid_telegram_bot/tools/: __init__.py  analytics_tools.py  deeplink_tools.py  event_tools.py  free_tools.py  group_tools.py  media_tools.py  payment_tools.py  plan_tools.py  queue_tools.py  user_tools.py
src/paid_telegram_bot/utils/: __init__.py  deep_links.py  file_delivery.py  formatter.py
tests/: test_bot_manager.py  test_database.py  test_license.py  test_message_queue.py  test_rate_limiter.py  test_tools.py
